removed change tracking after monday, tuesday meetings

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -34,7 +34,7 @@
 \maketitle
 
 \begin{abstract}
-Type families on higher inductive types such as pushouts can capture the homotopical properties of differential geometric constructions including connections, curvature, gauge transformations, and vector fields. We define a class of combinatorial pushouts, then define principal bundles, tangent bundles, connections, curvature, and vector fields on these. We draw inspiration in part from the young field of discrete differential geometry, and in part from the original classical proofs, which often make use of triangulations and other discrete arguments. We prove an equality relating the Gauss-Bonnet theorem to the Poincaré-Hopf theorem. We also attempt to map out future directions.\chcomment[id=Greg]{rewrote}
+Type families on higher inductive types such as pushouts can capture the homotopical properties of differential geometric constructions including connections, curvature, gauge transformations, and vector fields. We define a class of combinatorial pushouts, then define principal bundles, tangent bundles, connections, curvature, and vector fields on these. We draw inspiration in part from the young field of discrete differential geometry, and in part from the original classical proofs, which often make use of triangulations and other discrete arguments. We prove an equality relating the Gauss-Bonnet theorem to the Poincaré-Hopf theorem. We also attempt to map out future directions.
 \end{abstract}
 
 \begin{dedication}
