--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
@@ -28,7 +28,6 @@ then we say
 \item The map \( f_k \) is a \defemph{\( k \)-bundle} on \( \mm_k \).
 \item The pair given by the map \( f_k \) and the proof \( f_k\circ \imath_{k-1}=f_{k-1} \) that \( f_k \) extends \( f_{k-1} \) is called a \defemph{\( k \)-connection on the bundle \( f_{k-1} \)}.
 \end{itemize}
-\chcomment[id=Greg]{split into two defs: one using cellular structure, one using combinatorial}
 
 
 Having the additional structure of a simplicial complex allows us to further define curvature, which is a local concept.
@@ -68,7 +67,7 @@ the outer square of which restricts on each face to the diagram
   \arrow[from=2-1, to=2-2]
 \end{tikzcd}
 \end{center}
-then we say the filler \( \flat_k \) is called a \defemph{flatness structure for the face \( m_k \)}, or, to align with classical terms, the \defemph{curvature at the face \( m_k \)}, and its ending path is called the \defemph{holonomy around the face}.\chcomment[id=Greg]{currently flatness = curvature}
+then we say the filler \( \flat_k \) is called a \defemph{flatness structure for the face \( m_k \)}, or, to align with classical terms, the \defemph{curvature at the face \( m_k \)}, and its ending path is called the \defemph{holonomy around the face}.
 
 
 The definitions can be digested to give
@@ -79,7 +78,7 @@ Given \( f_{k-1} \) as above, a \( k \)-connection exists if and only if there e
 
 \subsection{Connections as local trivializations}
 \label{sec:localtriv}
-This section can ve viewed as an extended remark. The observation we want to make is that the data of a \( 1 \)-bundle is related to the construction of local trivializations: the fiber at one vertex can be extended throughout a single face coherently, using the connection (the extension of the classifying map to the edges) to specify isomorphisms with the fibers at the other points, and the higher connections to establish commutativity between these. \chcomment[id=Greg]{rewrote section}
+This section can ve viewed as an extended remark. The observation we want to make is that the data of a \( 1 \)-bundle is related to the construction of local trivializations: the fiber at one vertex can be extended throughout a single face coherently, using the connection (the extension of the classifying map to the edges) to specify isomorphisms with the fibers at the other points, and the higher connections to establish commutativity between these. 
 
 
 We introduce a notation more suitable for the algebra of charts and overlaps: denote by \( g_{ji}:Ti\to Tj \) the isomorphism of transport along an edge \( e_{ij}:i=_\mm j \). The indices are ordered from right to left, which is compatible with function composition notation. Denote the inverse function by swapping indices: \( g_{ij}\defeq g_{ji}^{-1} \). Assume we have some fixed isomporphism \( T_i=S^1 \), and to avoid composing everything with this function we will assume it is \( \id \). In the diagram below we see the data arranged so that our bundles fibers are on the left, and the fiber of a trivial bundle is on the right. 
@@ -118,7 +117,6 @@ We will build up a map \( T \) out of \( \oo_0\to\oo_1\to\oo \) which is meant t
 \link(y) &= \hgr{bogr}_1 & \link(g) &= \hgr{wryo}_1 \\
 \link(b) &= \hgr{woyr}_1 & \link(o) &= \hgr{wgyb}_1
 \end{align*}
-\chcomment[id=Greg]{new notation}
 Recall that the double-brackets denote the realization via pushouts of the combinatorial data, and the subscript takes the bare type of maximal dimension, forgetting the cellular structure. So \( T_0 \) is a composition of a map into \( \simcompt \) follows by the realization map to \( \EMzo \).
 
 We chose these orderings for the vertices in the link, by visualizing standing at the given vertex as if it were the north pole, then looking south and enumerating the link in clockwise order, starting from \( w \) if possible, else \( b \).
@@ -131,7 +129,7 @@ We chose these orderings for the vertices in the link, by visualizing standing a
 \label{fig:triangle_of_equators}
 \end{figure}
 
-To extend \( T_0 \) to a function \( T_1 \) on the 1-skeleton we have some freedom. We will do something motivated by the figures we have been drawing of an octahedron embedded in 3-dimensional space. We will imagine how \( T_1 \) changes as we slide from point to point in the embedding shown in the figures. Sliding from \( w \) to \( b \) and tipping the link as we go, we see \( r\mapsto r \) and \( o\mapsto o \) because those lie on the axis of rotation. Then \( g\mapsto w \) and \( b\mapsto y \). \chcomment[id=Greg]{reworded}
+To extend \( T_0 \) to a function \( T_1 \) on the 1-skeleton we have some freedom. We will do something motivated by the figures we have been drawing of an octahedron embedded in 3-dimensional space. We will imagine how \( T_1 \) changes as we slide from point to point in the embedding shown in the figures. Sliding from \( w \) to \( b \) and tipping the link as we go, we see \( r\mapsto r \) and \( o\mapsto o \) because those lie on the axis of rotation. Then \( g\mapsto w \) and \( b\mapsto y \). 
 
 
 \begin{mydef}
@@ -158,7 +156,6 @@ Transport along the equator:
 \item \( T_1(ob):\hgr{wgyb}_1\mapsto \hgr{woyr}_1 \)
 \end{itemize}
 \end{mydef}
-\chcomment[id=Greg]{new notation}
 
 It's very important to be able to visualize what \( T_1 \) does to triangular paths such as \( wb\cdot br\cdot rw \) (which circulates around the boundary of face \( wbr \)). You can see it if you imagine Figure~\ref{fig:triangle_of_equators} as the frames of a short movie. Or you can place your palm over the top of a cube and note where your fingers are pointing, then slide your hand to an equatorial face, then along the equator, then back to the top. The answer is: you come back rotated clockwise by a quarter-turn, which we saw in Definition~\ref{def:rotation} where it is called \( \hgr{R} \).
 
