--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
@@ -1,6 +1,6 @@
 \section{Overview}
 
-The outline is that we will define \chcomment[id=Greg]{tweaked, added refs}
+The outline is that we will define 
 \begin{itemize}
 \item principal bundles in Section~\ref{sec:torsors},
 \item simplicial complexes, and homotopical realizations of these in Section~\ref{sec:discrete_man},
@@ -18,7 +18,7 @@ and then define in Section~\ref{sec:totals}
 \item and prove the equality of these to each other.
 \end{itemize}
 
-We will build up an example of all of these structures on an octahedron model of the sphere, and compute its Euler characteristic of 2. We will not, however, be supplying a separate definition of Euler characteristic so as to truly reproduce the Gauss-Bonnet and Poincaré-Hopf theorems.\chcomment[id=Greg]{added para.}
+We will build up an example of all of these structures on an octahedron model of the sphere, and compute its Euler characteristic of 2. We will not, however, be supplying a separate definition of Euler characteristic so as to truly reproduce the Gauss-Bonnet and Poincaré-Hopf theorems.
 
 We will consider functions \( \mm\to \EM(\zz,1) \) where \( \EM(\zz,1) \) is the connected component in the universe of the Eilenberg-MacLane space \( \K(\zz,1) \) which we will take to be \( \so \), and where \( \mm \) is a combinatorial manifold of dimension 2, which is a simplicial complex encoded in a higher inductive type, such that each vertex has a neighborhood that looks like a disk with a discrete circle boundary (i.e. a polygon). We can call terms \( C:\EM(\zz,1) \) ``mere circles.''
 
@@ -37,7 +37,7 @@ We will see in Section~\ref{sec:polygons} that \( \EM(\zz,1) \) contains all the
 \end{center}
 then we have a bundle of mere circles, with total space given by the \( \sit{} \)-type construction. We will show that this is not quite a principal bundle, i.e. a bundle of torsors. Torsors are types with the additional structure of a free and transitive group action. But if \( \link  \) satisfies an additional property (amounting to an orientation) then the pullback is a principal fibration, i.e. \( \link \) factors through a map \( \K(\zz,2)\to\EMzo \), where \( \K(\zz,2) \) is an Eilenberg-Mac Lane space. 
 
-We will argue that extending \( \link \) to a function \( T \) on paths can be thought of as constructing a connection, together with a ``flatness structure,'' i.e. a proof of flatness. Moreover, lifting \( T \) to \( X:\mm\to\EMp(\zz,1) \) can be thought of as a nonvanishing vector field. There will in general not be a total lift, just a lift on the 1-skeleton of \( \mm \). We will define the ``index'' of \( X \) at a face.\chcomment[id=Greg]{fresh edits}
+We will argue that extending \( \link \) to a function \( T \) on paths can be thought of as constructing a connection, together with a ``flatness structure,'' i.e. a proof of flatness. Moreover, lifting \( T \) to \( X:\mm\to\EMp(\zz,1) \) can be thought of as a nonvanishing vector field. There will in general not be a total lift, just a lift on the 1-skeleton of \( \mm \). We will define the ``index'' of \( X \) at a face.
 
-We will then define a method for visiting all the faces of a manifold in order to form ``totals'' of local objects. We will examine the total curvature and the total index and prove that they are equal, and argue that they are equal to the usual Euler characteristic. This will simultaneously prove the Poincaré-Hopf theorem and Gauss-Bonnet theorem in 2 dimensions, for combinatorial manifolds. This is similar to the classical proof of Hopf\cite{hopf}, presented in detail in Needham\cite{needham}.\chcomment[id=Greg]{fresh edits}
+We will then define a method for visiting all the faces of a manifold in order to form ``totals'' of local objects. We will examine the total curvature and the total index and prove that they are equal, and argue that they are equal to the usual Euler characteristic. This will simultaneously prove the Poincaré-Hopf theorem and Gauss-Bonnet theorem in 2 dimensions, for combinatorial manifolds. This is similar to the classical proof of Hopf\cite{hopf}, presented in detail in Needham\cite{needham}.
 
