tweaked fonts of section headings; wrote some stuff I like about swirling

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -20,8 +20,8 @@
 \geometry{right=1.2in}
 
 \renewenvironment{abstract}{\section*{\abstractname}}{}
-\titleformat*{\section}{\large\sffamily}
-\titleformat*{\subsection}{\normalsize\sffamily}
+\titleformat*{\section}{\large\bfseries\itshape}
+\titleformat*{\subsection}{\normalsize\bfseries}
 \titleformat*{\subsubsection}{\normalsize\sffamily}
 \titleformat{\chapter}[hang]{\LARGE\sffamily}{\LARGE\thechapter}{1ex}{}[]
 \titleformat{name=\chapter,numberless}[hang]{\LARGE\sffamily}{}{0ex}{}[]
@@ -54,15 +54,15 @@ This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and
 \tableofcontents 
 \clearpage
 \input{discrete_gauge_theory_intro}
-%\clearpage
+\clearpage
 \input{discrete_gauge_theory_torsors}
-%\clearpage
+\clearpage
 \input{discrete_gauge_theory_combman}
-%\clearpage
+\clearpage
 \input{discrete_gauge_theory_connections}
-%\clearpage
+\clearpage
 \input{discrete_gauge_theory_vector_fields}
-%\clearpage
+\clearpage
 \input{discrete_gauge_theory_totals}
 \clearpage
 % \appendix
