getting the argument in order, not quite there

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
@@ -147,6 +147,7 @@ Immediate from Lemma~\ref{lem:edges_cancel} and Corollary~\ref{cor:x_cancel}.
 \end{myproof}
 
 \begin{mycor}
+\label{thm:total_index_total_curvature}
 The total index is equal to the opposite of the total curvature. The total curvature is an integer.
 \end{mycor}
 
