--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -202,6 +202,7 @@
 \newcommand{\image}{\mathrm{Image}}
 \newcommand{\myfig}[2]{\begin{figure}[h]\caption{#1}\centering\includegraphics[width=0.6\textwidth]{#2}\end{figure}}
 %\newcommand{\gc}[1]{}
+\newcommand{\simto}{\stackrel{\sim}{\to}}
 \newcommand{\defeq}{\stackrel{\mathrm{def}}{=}}
 \newcommand{\defemph}[1]{\textbf{#1}}
 \newcommand{\U}{\mathcal{U}}
