sending this section 5 to Mathieu

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -63,7 +63,7 @@ This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and
 \clearpage
 \input{discrete_gauge_theory_vector_fields}
 \clearpage
-\input{discrete_gauge_theory_totals}
+%\input{discrete_gauge_theory_totals}
 \clearpage
 % \appendix
 % \input{discrete_gauge_theory_appendix}
